Fix the loading indicator sometimes being visible when the pop-up is opened
The loading indicator could be seen shrinking down to its starting size.  This just sets it to have no transition duration until it is time to load.

--- a/extension/styles/popup.css
+++ b/extension/styles/popup.css
@@ -23,7 +23,6 @@ body {
 	transform-origin: left center;
 	transform: scaleX(0);
 	transition-property: background, transform;
-	transition-duration: 2s;
 	transition-timing-function: linear;
 }
 	.loading #loadIndicator {
